<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <TextView
        android:id="@+id/tv_tag"
        android:layout_width="80dp"
        android:layout_height="15dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/tv_tag"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:orientation="horizontal"
        android:text="@string/tv_title"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:text="@string/tv_text"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/iv_icon"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="100dp"
        android:layout_height="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="end|center_vertical"
        android:text="@string/tv_time"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_remove"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/iv_remove"
        app:layout_constraintBottom_toTopOf="@+id/tv_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/icon_delete"
        app:tint="#D3D3D3" />

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/iv_remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_notepad"
        app:tint="#A9A9A9" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00FF0000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>